src/components/search/search.scss
@import url("https://fonts.googleapis.com/css?family=Quattrocento&display=swap");

.search {
  font-family: "Quattrocento", cursive;
  width: 100%;

  &__results {
    margin: 0 150px 100px 150px;

    @media screen and (min-width: 600px) and (max-width: 1170px) {
      margin: 0 10px;
    }
    @media only screen and (max-width: 480px) {
      margin: 0 2px;
    }

    .button-wrapper {
      display: flex;
      justify-content: center;
    }
    .button-next {
      outline: none;
      border: none;
      background: none;
      color: rgba(19, 128, 36, 0.54);
      cursor: pointer;

      svg {
        margin-top: 50px;
        font-size: 2.5rem;
        transition: 0.3s;

        @media only screen and (max-width: 480px) {
          margin-top: 5px;
          font-size: 1.5rem;
        }
      }

      &:hover {
        color: #4caf50;
        transition: 0.3s;
      }
    }
    &:focus {
      outline: none;
    }
    &__discover {
      color: #484848;
      margin-top: 80px;
      margin-bottom: 30px;
      text-align: center;
      font-size: 1.4rem;

      @media only screen and (max-width: 480px) {
        font-size: 1.2rem;
        margin-top: 30px;
      }
    }
    &__total {
      color: #484848;
      margin: 50px;
      @media only screen and (max-width: 480px) {
        margin: 10px;
        font-size: 0.7rem;
      }
    }
  }
}

